12-opa-gatekeeper/constraint-templates/block-nodeport.yaml
# ConstraintTemplate: Blokira NodePort servise
# NodePort servisi izlažu portove na svim nodes, što je sigurnosni rizik
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sblocknodeport
  annotations:
    description: >-
      Blokira kreiranje NodePort servisa koji izlažu portove direktno na nodes
spec:
  crd:
    spec:
      names:
        kind: K8sBlockNodePort
      validation:
        openAPIV3Schema:
          type: object
          properties:
            allowedNamespaces:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sblocknodeport

        violation[{"msg": msg}] {
          input.review.object.kind == "Service"
          input.review.object.spec.type == "NodePort"
          not namespace_allowed
          msg := sprintf("NodePort servisi nisu dozvoljeni u namespace-u %v",
                        [input.review.object.metadata.namespace])
        }

        namespace_allowed {
          allowed := input.parameters.allowedNamespaces[_]
          input.review.object.metadata.namespace == allowed
        }
